# python-project-49

./: .gitignore  Makefile  README.md  demo_brain_gcd  pyproject.toml
brain_games/: cli.py  engine_bg.py
brain_games/games/: brain_calc.py  brain_calc_logic.py  brain_even.py  brain_even_logic.py  brain_gcd.py  brain_gcd_logic.py  brain_prime.py  brain_prime_logic.py  brain_progression.py  brain_progression_logic.py  engine_bg.py  functions.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
demos/: demo_brain_calc  demo_brain_prime  demo_brain_progression  demo_install_and_brain_even
